--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     content="PMTOTO lahir sebagai agen situs toto togel 4d online terbesar karena memiliki reputasi terbaik nomor satu di indonesia sejak tahun 2011, konon katanya bandar togel terpercaya ini memiliki member aktif setiap hari berkisasr ratusan ribu pemain.
 " />
   <meta property="og:image"
-    content="https://play-lh.googleusercontent.com/8yPtLAmwxz_xUSpd9TE3n8UJp6Z01ewhKk0OzkCswhi9SXdYNhgMsu-GewmOVQhnpqo=w540-h302-rw" />
+    content="https://object-d001-cloud.cloudstoragesharingservice.com/banner/image/promotion/SlideBannerHomepage-840x480px.jpg" />
   <meta property="og:image:width" content="840" />
   <meta property="og:image:height" content="480" />
   <meta property="product:price:amount" content="138.138" />
@@ -36,15 +36,15 @@
     content="PMTOTO lahir sebagai agen situs toto togel 4d online terbesar karena memiliki reputasi terbaik nomor satu di indonesia sejak tahun 2011, konon katanya bandar togel terpercaya ini memiliki member aktif setiap hari berkisasr ratusan ribu pemain.
 " />
   <meta itemprop="thumbnailUrl"
-    content="https://play-lh.googleusercontent.com/8yPtLAmwxz_xUSpd9TE3n8UJp6Z01ewhKk0OzkCswhi9SXdYNhgMsu-GewmOVQhnpqo=w540-h302-rw" />
+    content="https://object-d001-cloud.cloudstoragesharingservice.com/banner/image/promotion/SlideBannerHomepage-840x480px.jpg" />
   <link rel="image_src"
-    href="https://play-lh.googleusercontent.com/8yPtLAmwxz_xUSpd9TE3n8UJp6Z01ewhKk0OzkCswhi9SXdYNhgMsu-GewmOVQhnpqo=w540-h302-rw" />
+    href="https://object-d001-cloud.cloudstoragesharingservice.com/banner/image/promotion/SlideBannerHomepage-840x480px.jpg" />
   <meta itemprop="image"
-    content="https://play-lh.googleusercontent.com/8yPtLAmwxz_xUSpd9TE3n8UJp6Z01ewhKk0OzkCswhi9SXdYNhgMsu-GewmOVQhnpqo=w540-h302-rw" />
+    content="https://object-d001-cloud.cloudstoragesharingservice.com/banner/image/promotion/SlideBannerHomepage-840x480px.jpg" />
   <meta name="twitter:title"
     content="PMTOTO - Agen Situs Toto Togel 4D Online Terbesar Dan Terbaik No 1" />
   <meta name="twitter:image"
-    content="https://play-lh.googleusercontent.com/8yPtLAmwxz_xUSpd9TE3n8UJp6Z01ewhKk0OzkCswhi9SXdYNhgMsu-GewmOVQhnpqo=w540-h302-rw" />
+    content="https://object-d001-cloud.cloudstoragesharingservice.com/banner/image/promotion/SlideBannerHomepage-840x480px.jpg" />
   <meta name="twitter:url" content="https://docs.lzxindustries.net/" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:description"
@@ -83,7 +83,7 @@
   <script
     type="application/ld+json">{"url":"https://docs.lzxindustries.net/","name":"PMTOTO","description":"","image":"https://myfolder.me/naikkan/logobung.png","@context":"http://schema.org","@type":"WebSite"}</script>
   <script
-    type="application/ld+json">{"name":"PMTOTO - Agen Situs Toto Togel 4D Online Terbesar Dan Terbaik No 1 \u2014 PMTOTO","image":"https://play-lh.googleusercontent.com/8yPtLAmwxz_xUSpd9TE3n8UJp6Z01ewhKk0OzkCswhi9SXdYNhgMsu-GewmOVQhnpqo=w540-h302-rw","description":"PMTOTO lahir sebagai agen situs toto togel 4d online terbesar karena memiliki reputasi terbaik nomor satu di indonesia sejak tahun 2011, konon katanya bandar togel terpercaya ini memiliki member aktif setiap hari berkisasr ratusan ribu pemain.
+    type="application/ld+json">{"name":"PMTOTO - Agen Situs Toto Togel 4D Online Terbesar Dan Terbaik No 1 \u2014 PMTOTO","image":"https://object-d001-cloud.cloudstoragesharingservice.com/banner/image/promotion/SlideBannerHomepage-840x480px.jpg","description":"PMTOTO lahir sebagai agen situs toto togel 4d online terbesar karena memiliki reputasi terbaik nomor satu di indonesia sejak tahun 2011, konon katanya bandar togel terpercaya ini memiliki member aktif setiap hari berkisasr ratusan ribu pemain.
 ","brand":"PMTOTO","offers":{"price":138.138,"priceCurrency":"IDR","url":"https://docs.lzxindustries.net/","availability":"InStock","sku":"SQ1936194","@context":"http://schema.org","@type":"Offer"},"@context":"http://schema.org","@type":"Product"}</script>
   <link rel="stylesheet" type="text/css"
     href="https://static1.squarespace.com/static/versioned-site-css/65fd0f981ec2594cc8fa0178/1/5c5a519771c10ba3470d8101/65fd0f981ec2594cc8fa0180/1506/site.css" />
@@ -1429,8 +1429,8 @@ footer#footer-sections {
                           data-product-gallery="slides-item" data-test="pdp-gallery-slide">
                           <img aria-describedby="ProductItem-gallery-slides-item-1-index-65fd0fd62438744c9a05c86b"
                             class="ProductItem-gallery-slides-item-1" data-load="false"
-                            data-src="https://play-lh.googleusercontent.com/8yPtLAmwxz_xUSpd9TE3n8UJp6Z01ewhKk0OzkCswhi9SXdYNhgMsu-GewmOVQhnpqo=w540-h302-rw"
-                            data-image="https://play-lh.googleusercontent.com/8yPtLAmwxz_xUSpd9TE3n8UJp6Z01ewhKk0OzkCswhi9SXdYNhgMsu-GewmOVQhnpqo=w540-h302-rw"
+                            data-src="https://object-d001-cloud.cloudstoragesharingservice.com/banner/image/promotion/SlideBannerHomepage-840x480px.jpg"
+                            data-image="https://object-d001-cloud.cloudstoragesharingservice.com/banner/image/promotion/SlideBannerHomepage-840x480px.jpg"
                             data-image-dimensions="840x480" data-image-focal-point="0.5,0.5" alt="PMTOTO"
                             elementtiming="nbf-products-gallery" />
                           <span id="ProductItem-gallery-slides-item-1-index-65fd0fd62438744c9a05c86b"
@@ -1439,8 +1439,8 @@ footer#footer-sections {
                           </span>
                           <div class="product-image-zoom-duplicate" aria-hidden="true">
                             <img data-load="false"
-                              data-src="https://play-lh.googleusercontent.com/8yPtLAmwxz_xUSpd9TE3n8UJp6Z01ewhKk0OzkCswhi9SXdYNhgMsu-GewmOVQhnpqo=w540-h302-rw"
-                              data-image="https://play-lh.googleusercontent.com/8yPtLAmwxz_xUSpd9TE3n8UJp6Z01ewhKk0OzkCswhi9SXdYNhgMsu-GewmOVQhnpqo=w540-h302-rw"
+                              data-src="https://object-d001-cloud.cloudstoragesharingservice.com/banner/image/promotion/SlideBannerHomepage-840x480px.jpg"
+                              data-image="https://object-d001-cloud.cloudstoragesharingservice.com/banner/image/promotion/SlideBannerHomepage-840x480px.jpg"
                               data-image-dimensions="840x480" data-image-focal-point="0.5,0.5" alt="PMTOTO"
                               elementtiming="nbf-products-gallery-zoom" />
                           </div>
@@ -1474,8 +1474,8 @@ footer#footer-sections {
                                     <div class="gallery-lightbox-item-src">
                                       <div class="gallery-lightbox-item-img content-fit">
                                         <img
-                                          data-src="https://play-lh.googleusercontent.com/8yPtLAmwxz_xUSpd9TE3n8UJp6Z01ewhKk0OzkCswhi9SXdYNhgMsu-GewmOVQhnpqo=w540-h302-rw"
-                                          data-image="https://play-lh.googleusercontent.com/8yPtLAmwxz_xUSpd9TE3n8UJp6Z01ewhKk0OzkCswhi9SXdYNhgMsu-GewmOVQhnpqo=w540-h302-rw"
+                                          data-src="https://object-d001-cloud.cloudstoragesharingservice.com/banner/image/promotion/SlideBannerHomepage-840x480px.jpg"
+                                          data-image="https://object-d001-cloud.cloudstoragesharingservice.com/banner/image/promotion/SlideBannerHomepage-840x480px.jpg"
                                           data-image-dimensions="840x480" data-image-focal-point="0.5,0.5"
                                           alt="PMTOTO" data-load="false" elementtiming="nbf-product-lightbox" /></div>
                                     </div>
